--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -85,6 +85,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/text_input_rut"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/rut"
